# AyuMitraAI

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  motia-workbench.json  package-lock.json  package.json  seed_doctors.ps1  start_backend.ps1  start_frontend.ps1
.github/workflows/: main_ayumitraai.yml
backend/: .env  .env.example  agent_endpoints.py  auth.py  cerebras_service.py  config.py  doctor_scraper.py  fix_passwords.py  gemini_service.py  langchain_agents.py  model_utils.py  models.py  pyproject.toml  qdrant_service.py  requirements.txt  seed_doctors.py  server.py  triage_graph.py
backend/ayumitra_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
src/api/: analyze-symptoms-ai.step.ts  analyze-symptoms.step.ts  auth-login.step.ts  auth-register.step.ts  clinic-register.step.ts  connect-with-doctor.step.ts  doctor-go-online.step.ts  doctor-register.step.ts  get-nearby-doctors.step.ts  hospital-register.step.ts
src/events/: analyze_symptoms_ai_step.py  clinic-registered.step.ts  doctor-registered.step.ts  doctor-status-changed.step.ts  find-matching-doctors-ai.step.ts  find-matching-doctors.step.ts  hospital-registered.step.ts  notify-doctor.step.ts  notify-patient-ai.step.ts  patient-request-created.step.ts  send-clinic-welcome-email.step.ts  send-doctor-welcome-email.step.ts  send-hospital-welcome-email.step.ts  send-welcome-email.step.ts  symptom-analyzed.step.ts  (+2 more)
(+20 files in other folders)
