[project]
name = "ayumitra-ai"
version = "1.0.0"
description = "AI-powered healthcare routing platform"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.25.0",
    "motor==3.3.1",
    "pymongo==4.5.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "passlib==1.7.4",
    "bcrypt==4.1.3",
    "langchain>=0.2.0",
    "langchain-core>=0.2.33",
    "langchain-google-genai==1.0.10",
    "langsmith>=0.1.17",
    "python-multipart==0.0.20",
    "email-validator==2.3.0",
    "google-generativeai>=0.3.2",
    "google-genai>=0.3.0",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "lxml==4.9.3",
    "firecrawl-py==0.0.16",
    "protobuf>=4.25.3",
    "slowapi==0.1.9",
    "langgraph==0.2.60",
    "qdrant-client>=1.18.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "server",
    "config",
    "models",
    "auth",
    "gemini_service",
    "doctor_scraper",
    "langchain_agents",
    "agent_endpoints",
    "cerebras_service"
]
